--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,37 @@
 .cover {
-  display: grid;
-  grid-template-columns: 1184px;
+  background-image: url(./../../images/cover-trains.jpg);
+  max-width: 1184px;
+  min-height: 740px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  z-index: 0;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 92px 0;
+  margin: 92px auto;
+}
+
+.cover:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(42, 44, 47, .3);
+  z-index: -1;
+  transition: all .5s;
+}
+
+.cover:hover:before {
+  background-color: rgba(42, 44, 47, .8);
+}
+
+@media only screen and (max-width: 1024px) {
+  .cover {
+    min-height: 640px;
+  }
 }
