--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -1,22 +1,13 @@
 .gallery {
   display: grid;
   margin: 0 auto;
+  max-width: 1184px;
+  grid-template-columns: repeat(auto-fit, minmax(284px, auto));
+  gap: 16px;
+  padding: 0 48px;
 }
 
-@media (min-width: 1184px) {
-  .gallery {
-    grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-    gap: 16px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .gallery {
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 14px;
-  }
-}
-
+/*
 @media (min-width: 768px) {
   .gallery {
     grid-template-columns: repeat(auto-fit, minmax(352px, 1fr));
@@ -29,4 +20,4 @@
     grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
     gap: 12px;
   }
-}
+} */ 
