--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,3 +1,9 @@
 .header {
-  grid-area: header;
+  padding: 28px 48px 56px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .header {
+    padding: 28px 48px 48px;
+  }
 }
