--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,3 +6,9 @@
   max-width: 640px;
   margin: 32px 0 64px;
 }
+
+@media only screen and (max-width: 1024px) {
+  .lead__subtitle {
+    margin: 32px 0 56px;
+  }
+}
