--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,7 +1,7 @@
 .places {
   display: grid;
-  grid-template-rows: repeat(5, 660px);
-  grid-auto-rows: 660px;
+  grid-template-rows: repeat(5, auto);
   row-gap: 80px;
   margin-top: 92px;
+  padding: 0 48px;
 }
