--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,3 +1,10 @@
 .footer {
-  padding: 0 48px 24px;
+  margin: 0 48px;
+  padding-bottom: 24px;
+}
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    margin: 0 24px;
+  }
 }
