--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,17 @@
 .header {
-  padding: 28px 48px 56px;
+  padding: 28px 0 56px;
+  margin: 0 48px;
 }
 
 @media only screen and (max-width: 1024px) {
   .header {
-    padding: 28px 48px 48px;
+    padding: 28px 0 48px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .header {
+    margin: 0 24px;
+  }
+}
+
