--- a/blocks/lead/__wrapper/lead__wrapper.css
+++ b/blocks/lead/__wrapper/lead__wrapper.css
@@ -1,13 +1,19 @@
 .lead__wrapper {
   display: flex;
   flex-direction: column;
-  margin: 0 0 92px;
+  margin: 0 48px;
   max-width: 984px;
 }
 
 @media only screen and (max-width: 1024px) {
   .lead__wrapper {
     max-width: 928px;
-    padding: 0 48px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .lead__wrapper {
+    width: 100%;
+  }
+}
+
