--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -8,4 +8,6 @@
   font-family: 'Inter Sans', 'Helvetica', sans-serif;
   background-color: #2A2C2F;
   color: #fff;
+  max-width: 1280px;
+  margin: 0 auto;
 }
