--- a/blocks/places/__item/places__item.css
+++ b/blocks/places/__item/places__item.css
@@ -11,7 +11,17 @@
 
 @media only screen and (max-width: 1024px) {
   .places__item {
-    grid-template-columns: 440px 456px;
+    grid-template-columns: 440px auto;
+    /* width: calc(100% - 32px); */
     column-gap: 32px;
+    margin: 0 28px;
+    /* max-width: calc(100% - 32px / 2); */
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .places__item {
+    grid-template-columns: 340px auto;
+    column-gap: 28px;
   }
 }
