--- a/blocks/places/__text/places__text.css
+++ b/blocks/places/__text/places__text.css
@@ -8,3 +8,9 @@
 .places__text:nth-child(1) {
   margin-bottom: 26px;
 }
+
+@media only screen and (max-width: 768px) {
+  .places__text {
+    font-size: 16px;
+  }
+}
