--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,6 +2,12 @@
   display: grid;
   grid-template-rows: repeat(5, auto);
   row-gap: 80px;
-  margin-top: 92px;
-  padding: 0 48px;
+  margin: 92px auto;
+}
+
+@media only screen and (max-width: 768px) {
+  .places {
+    margin: 88px auto 90px;
+    row-gap: 73px;
+  }
 }
