--- a/pages/index.css
+++ b/pages/index.css
@@ -3,6 +3,8 @@
 /* Fonts */
 @import url(../vendor/fonts/fonts.css);
 /* Root */
+@import url(../blocks/root/root.css);
+/* Page */
 @import url(../blocks/page/page.css);
 /* Header */
 @import url(../blocks/header/header.css);
@@ -51,8 +53,9 @@
 
 /* Cover */
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__text/cover__text.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
 @import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
 
 /* Footer */
 @import url(../blocks/footer/footer.css);
