--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -5,3 +5,15 @@
   margin: 0;
 }
 
+@media only screen and (max-width: 678px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 109%;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .intro__title {
+    max-width: 250px;
+  }
+}
