--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,6 +3,15 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 122%;
-  margin: 32px 0 0;
+  margin-top: 32px;
   text-align: center;
+}
+
+@media only screen and (max-width: 678px) {
+  .cover__subtitle {
+    max-width: 288px;
+    font-size: 14px;
+    line-height: 114%;
+    margin-top: 16px;
+  }
 }
