--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,4 +1,17 @@
 .cover__title {
   max-width: 560px;
   text-align: center;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 106%;
+  margin: 0;
+}
+
+
+@media only screen and (max-width: 678px) {
+  .cover__title {
+    max-width: 255px;
+    font-size: 32px;
+    line-height: 109%;
+  }
 }
