--- a/blocks/footer/__list-item/footer__list-item.css
+++ b/blocks/footer/__list-item/footer__list-item.css
@@ -3,3 +3,10 @@
   font-size: 16px;
   line-height: 112%;
 }
+
+@media only screen and (max-width: 678px) {
+  .footer__list-item {
+    font-size: 24px;
+    line-height: 100%;
+  }
+}
