--- a/blocks/footer/__nav-bar/footer__nav-bar.css
+++ b/blocks/footer/__nav-bar/footer__nav-bar.css
@@ -2,3 +2,9 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media only screen and (max-width: 678px) {
+  .footer__nav-bar {
+    display: block;
+  }
+}
