--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,3 +8,10 @@
     margin: 0 24px;
   }
 }
+
+@media only screen and (max-width: 678px) {
+  .footer{
+    padding-bottom: 24px;
+    margin: 0 16px;
+  }
+}
