--- a/blocks/gallery/gallery.css
+++ b/blocks/gallery/gallery.css
@@ -17,6 +17,15 @@
 @media only screen and (max-width: 768px) {
   .gallery {
     padding: 0 24px;
+    grid-template-columns: repeat(auto-fit, minmax(352px, auto));
     gap: 16px;
+  }
+}
+
+@media only screen and (max-width: 678px) {
+  .gallery {
+    padding: 0 16px;
+    grid-template-columns: repeat(auto-fit, minmax(288px, auto));
+    gap: 12px;
   }
 }
