--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -5,3 +5,22 @@
   margin: 40px 0 33px;
   max-width: 690px;
 }
+
+@media only screen and (max-width: 768px) {
+  .intro__text {
+    margin: 40px 0 33px;
+    max-width: 720px;
+  }
+}
+
+@media only screen and (max-width: 678px) {
+  .intro__text {
+    margin: 40px 0 34px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .intro__text {
+    max-width: 288px;
+  }
+}
