--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,3 +12,11 @@
     margin: 32px 0 56px;
   }
 }
+
+@media only screen and (max-width: 678px) {
+  .lead__subtitle {
+    font-size: 16px;
+    max-width: 288px;
+    margin: 16px 0 40px;
+  }
+}
