--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -12,3 +12,11 @@
     margin: 0 24px;
   }
 }
+
+@media only screen and (max-width: 678px) {
+  .lead__title {
+    max-width: 288px;
+    font-size: 40px;
+    line-height: 110%;
+  }
+}
