--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,12 +1,13 @@
-.places__link {
+.place__link {
   font-weight: 400;
+  text-underline-offset: 5px;
   font-size: 18px;
   line-height: 122%;
   color: #fff;
   transition: color .2s ease-in-out;
 }
 
-.places__link:hover,
+.place__link:hover,
 :focus {
   color: hsla(0, 0%, 100%, 0.607);
 }
