--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,16 +1,16 @@
-.places__text {
+.place__text {
   font-weight: 400;
   font-size: 18px;
   line-height: 163%;
   margin: 0;
 }
 
-.places__text:nth-child(1) {
-  margin-bottom: 26px;
+.place__text:nth-child(2) {
+  margin-top: 26px;
 }
 
 @media only screen and (max-width: 768px) {
-  .places__text {
+  .place__text {
     font-size: 16px;
   }
 }
