--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,27 +1,40 @@
-.places__item {
+.place {
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 460px auto;
   row-gap: 48px;
   column-gap: 40px;
   justify-content: center;
   grid-template-areas:
     "header url"
     "image paragraph";
+  margin-bottom: 80px;
+}
+
+.place:last-of-type {
+  margin-bottom: 0;
 }
 
 @media only screen and (max-width: 1024px) {
-  .places__item {
+  .place {
     grid-template-columns: 440px auto;
-    /* width: calc(100% - 32px); */
     column-gap: 32px;
-    margin: 0 28px;
-    /* max-width: calc(100% - 32px / 2); */
   }
 }
 
 @media only screen and (max-width: 768px) {
-  .places__item {
+  .place {
     grid-template-columns: 340px auto;
     column-gap: 28px;
+    margin-bottom: 73px;
+  }
+}
+
+@media only screen and (max-width: 678px) {
+  .place {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+    row-gap: 0;
+    column-gap: 0;
   }
 }
