--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,13 +1,26 @@
 .places {
-  display: grid;
-  grid-template-rows: repeat(5, auto);
-  row-gap: 80px;
+  max-width: 984px;
   margin: 92px auto;
+}
+
+@media only screen and (max-width: 1024px) {
+  .places {
+    max-width: 928px;
+    margin: 92px 48px 0;
+  }
 }
 
 @media only screen and (max-width: 768px) {
   .places {
-    margin: 88px auto 90px;
-    row-gap: 73px;
+    max-width: 720px;
+    margin: 88px 24px 0;
   }
 }
+
+@media only screen and (max-width: 678px) {
+  .places {
+    max-width: calc(100% - 16px*2);
+    margin: 64px 16px 0;
+  }
+}
+
