--- a/pages/index.css
+++ b/pages/index.css
@@ -1,24 +1,33 @@
 /* Normalize */
 @import url(../vendor/normalize.css);
+
 /* Fonts */
 @import url(../vendor/fonts/fonts.css);
+
 /* Root */
 @import url(../blocks/root/root.css);
+
 /* Page */
 @import url(../blocks/page/page.css);
+
 /* Header */
 @import url(../blocks/header/header.css);
+
 /* Navigation */
 @import url(../blocks/navigation-bar/navigation-bar.css);
 @import url(../blocks/logo/logo.css);
+@import url(../blocks/logo/__image/logo__image.css);
 @import url(../blocks/lang-menu/lang-menu.css);
 @import url(../blocks/lang-menu/__menu-item/lang-menu__menu-item.css);
 @import url(../blocks/lang-menu/__lang-link/lang-menu____lang-link.css);
 @import url(../blocks/lang-menu/__lang-link/_ru/lang-menu__lang-link_ru.css);
+
 /* Title */
 @import url(../blocks/section-title/section-title.css);
+
 /* Content */
 @import url(../blocks/content/content.css);
+
 /* Lead */
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/lead/__wrapper/lead__wrapper.css);
@@ -42,14 +51,14 @@
 
 /* Places */
 @import url(../blocks/places/places.css);
-@import url(../blocks/places/__item/places__item.css);
-@import url(../blocks/places/__link-container/places__link-container.css);
-@import url(../blocks/places/__text-container/places__text-container.css);
-@import url(../blocks/places/__link/places__link.css);
-@import url(../blocks/places/__text/places__text.css);
-@import url(../blocks/places/__image/places__image.css);
-@import url(../blocks/places/__title/places__title.css);
-@import url(../blocks/places/__url/places__url.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__link-container/place__link-container.css);
+@import url(../blocks/place/__link/place__link.css);
+@import url(../blocks/place/__text-container/place__text-container.css);
+@import url(../blocks/place/__text/place__text.css);
+@import url(../blocks/place/__url/place__url.css);
+@import url(../blocks/place/__title/place__title.css);
 
 /* Cover */
 @import url(../blocks/cover/cover.css);
@@ -64,3 +73,6 @@
 @import url(../blocks/footer/__link/footer__link.css);
 @import url(../blocks/footer/__links/footer__links.css);
 @import url(../blocks/footer/__list-item/footer__list-item.css);
+
+/* Full width */
+@import url(../blocks/full-width/full-width.css);
