Fixed version after code review

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,8 @@
 .footer {
   margin: 0 48px;
   padding-bottom: 24px;
+  display: flex;
+  justify-content: space-between;
 }
 
 @media only screen and (max-width: 768px) {
@@ -13,5 +15,6 @@
   .footer{
     padding-bottom: 24px;
     margin: 0 16px;
+    display: block;
   }
 }
