--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,6 +1,6 @@
 .place {
   display: grid;
-  grid-template-columns: 460px auto;
+  grid-template-columns: 460px 1fr;
   row-gap: 48px;
   column-gap: 40px;
   justify-content: center;
@@ -16,14 +16,14 @@
 
 @media only screen and (max-width: 1024px) {
   .place {
-    grid-template-columns: 440px auto;
+    grid-template-columns: 440px 1fr;
     column-gap: 32px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .place {
-    grid-template-columns: 340px auto;
+    grid-template-columns: 340px 1fr;
     column-gap: 28px;
     margin-bottom: 73px;
   }
