--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -7,7 +7,8 @@
   color: #fff;
 }
 
-.footer__copyright:hover {
+.footer__copyright:hover,
+:focus {
   background: linear-gradient(45deg, #fd004c,
       #fe9000,
       #fff200,
