--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,26 +1,31 @@
 .places {
   max-width: 984px;
-  margin: 92px auto;
+  margin: 102px auto;
 }
 
 @media only screen and (max-width: 1024px) {
   .places {
     max-width: 928px;
-    margin: 92px 48px 0;
+    margin: 102px 48px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .places {
     max-width: 720px;
-    margin: 88px 24px 0;
+    margin: 88px 24px 95px;
   }
 }
 
 @media only screen and (max-width: 678px) {
   .places {
     max-width: calc(100% - 16px*2);
-    margin: 64px 16px 0;
+    margin: 64px 16px 95px;
   }
 }
 
+@media only screen and (max-width: 375px) {
+  .places {
+    margin: 64px 16px;
+  }
+}
